# ie_pandas

./: README.md  README.txt  setup.cfg
src/ie_pandas/: __init__.py  code_file_01.py  code_file_04.py  code_file_88.py  code_file_89.py  datamanagement.py
tests/: test_data_modification.py  test_get_row.py  test_init.py  test_mean.py  test_std.py  test_sum.py  test_values.py
