# name is project name not necessarily same as folder name.
[metadata]
name = ie_pandas
version = 0.1.dev0

# Magic! Don't touch below this line
# May need to change install_requires <tab> with 4 spaces <    >
[options]
install_requires=
	numpy
	matplotlib>=2
package_dir=
    =src
packages=find:

[options.extras_require]
dev = 
	black
	pytest

[options.packages.find]
where=src